fix travis bug and temp fix image too big

--- a/static/style/project_display.scss
+++ b/static/style/project_display.scss
@@ -76,6 +76,7 @@
         }
         &__pictures {
             position: relative;
+            max-width: 50%;
             .owl-stage{
                 display: flex;
             }
